# database-with-gtk

./: meson.build  org.example.App.json  window.ui
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: application.vala  main.vala  meson.build  style.css  window.ui  window.vala
